--- a/module/view.html
+++ b/module/view.html
@@ -61,7 +61,7 @@
       </iframe>
     </div>
     <h3 class="question">视图模块插槽</h3>
-    <div class="answer">视图模块支持元指令“@slot”。用法类似于<a href="https://developer.mozilla.org/zh-CN/docs/Web/Web_Components/Using_templates_and_slots">Web组件</a>的插槽功能。
+    <div class="answer">视图模块支持元指令“@slot”。用法类似于<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/Web_Components/Using_templates_and_slots">Web组件</a>的插槽功能。
       <div>您可以在视图模块元素上定义一个或多个插槽，并在创建视图模块元素实例时将插槽内容插入到相应的位置（根据@slot的值来对应）。</div>
       <div>我们来看例子：</div>
       <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] template module (@slot directive)" src="https://codepen.io/dagger8224/embed/KwdaOyv?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
@@ -132,7 +132,7 @@
       </iframe>
     </div>
     <h3 class="question">View Module Slots</h3>
-    <div class="answer">View modules support the meta directive "@slot". The usage is similar to <a href="https://developer.mozilla.org/en-US/docs/Web/Web_Components/Using_templates_and_slots">Web components</a>' slot feature.
+    <div class="answer">View modules support the meta directive "@slot". The usage is similar to <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/Web_Components/Using_templates_and_slots">Web components</a>' slot feature.
       <div>You can define one or more slots on a view module element and insert the slot content when creating an instance of the view module (based on the "@slot" value).</div>
       <div>Let's take a look at an example:</div>
       <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] template module (@slot directive)" src="https://codepen.io/dagger8224/embed/KwdaOyv?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
